Replaced collect() with toList()